--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         
        <div class="container">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-md-1">
                         <img src="imgs/chief.gif" />
                 </div>
-                <h1>Chief Lake Lodge</h1>
+				<div class="col-md-4">
+					<h1>Chief Lake Lodge</h1>
+				</div>
             </div>
 
             <div class="navbar navbar-default">
@@ -41,7 +43,7 @@
 		<div id="cll_home" class="cll_page">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-8">
+					<div class="col-sm-6">
 						<div class="cll_home_desc">
 							Come vacation with us on Wisconsin's largest unspoiled 
 							wilderness lake. The "Big Chip" offers over 17,000 acres, mostly
@@ -82,7 +84,7 @@
 							radar runs take place in the Winter months. 
 						</div>
 					</div>
-					<div class="col-sm-4"><img src="imgs/sign_2011.jpg" /></div>
+					<div id="cll_welcome_pic" class="col-sm-6"><img src="imgs/sign_2011.jpg" /></div>
 				</div>
 			</div>
 		</div>
@@ -125,7 +127,7 @@
 			<div class="container">
 				
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-3">
 						<ul class="cll-side-med">
 							<li>Full Bar</li>
 							<li>Casual Dining</li>
@@ -137,7 +139,7 @@
 							<li>Satellite TV</li>
 						</ul>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-9">
 						<div id="img_restaurant" class="cll_image">
 						</div>
 					</div>
